--- a/projects/search/index.html
+++ b/projects/search/index.html
@@ -19,6 +19,8 @@
     </script>
     <link rel="stylesheet" href="../../css/search.css">
     <script src="../../js/search.js"></script>
+    <script type="text/javascript" id="cookiebanner"
+            src="https://cdn.jsdelivr.net/gh/dobarkod/cookie-banner@1.2.2/dist/cookiebanner.min.js"></script>
 </head>
 <body>
 computer
