--- a/projects/calculator/grade/index.html
+++ b/projects/calculator/grade/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="A weighted grade calculator to count your grade average. Normal grades and percentage grades compatible.">
     <title>Calculator - Weighted Grade</title>
     <script src="../../../js/gradecalc.js"></script>
     <link rel="stylesheet" href="../../../css/gradecalc.css">
