--- a/projects/index.html
+++ b/projects/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Search</title>
-
+    <meta name="description" content="A lot of projects from Vladimír Šimek, including games, calculators and lot of other stuff.">
+    <title>Web under construction</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YX1V6FE2N5"></script>
     <script>
@@ -17,25 +17,13 @@
 
         gtag('config', 'G-YX1V6FE2N5');
     </script>
-    <link rel="stylesheet" href="../../../css/search-mobile.css">
-    <script src="../../../js/search.js"></script>
     <script type="text/javascript" id="cookiebanner"
             src="https://cdn.jsdelivr.net/gh/dobarkod/cookie-banner@1.2.2/dist/cookiebanner.min.js"></script>
+    <link rel="stylesheet" href="../css/landing.css">
 </head>
 <body>
-<div class="nameDiv">
-    <h1>Search</h1>
-
-</div>
-<div class="tag">
-    <h2>Vladimír Šimek</h2>
-</div>
-<script>
-
-</script>
-<div class="search">
-    <input class="searchRow" placeholder="Start browsing!" id="searchText" type="text">
-     <button id="searchButton"></button>
+<div class="top">
+    <h1 class="topName">Vladimír Šimek - Web under construction</h1>
 </div>
 </body>
 </html>
