--- a/m/index.html
+++ b/m/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Vladimír Šimek is a professional developer, traveler, photographer and student from Czech Republic.">
     <title>Web under construction</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YX1V6FE2N5"></script>
@@ -18,8 +19,11 @@
     </script>
     <script type="text/javascript" id="cookiebanner"
             src="https://cdn.jsdelivr.net/gh/dobarkod/cookie-banner@1.2.2/dist/cookiebanner.min.js"></script>
+    <link rel="stylesheet" href="css/landing.css">
 </head>
 <body>
-Web is under construction
+<div class="top">
+    <h1 class="topName">Vladimír Šimek - Web under construction</h1>
+</div>
 </body>
 </html>
