memory game, random done

--- a/projects/calculator/grade/index.html
+++ b/projects/calculator/grade/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="A weighted grade calculator to count your grade average. Normal grades and percentage grades compatible.">
-    <title>Calculator - Weighted Grade</title>
+    <title>Calculator | Weighted Grade</title>
     <script src="../../../js/gradecalc.js"></script>
     <link rel="stylesheet" href="../../../css/gradecalc.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -43,7 +43,7 @@
         <div class="generatorDiv">
             <div class="generator">
                 <div class="generatorTop">
-                    <input value="New Col" id="generatorButton" class="generatorButton" type="button"
+                    <input value="New Row" id="generatorButton" class="generatorButton" type="button"
                            onclick="generateNewCol()">
                     <input value="Calculate" id="calculatorButton" class="generatorButton" type="button"
                            onclick="calculateGrade()">
