--- a/projects/calculator/index.html
+++ b/projects/calculator/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Choose from many types of calculators, including grade average calculator.">
-    <title>Web under construction</title>
+    <title>Vladimír Šimek | Calculators</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YX1V6FE2N5"></script>
     <script>
