--- a/projects/games/memory/index.html
+++ b/projects/games/memory/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="A lot of projects from Vladimír Šimek, including games, calculators and lot of other stuff.">
-    <title>Vladimír Šimek | Projects</title>
+    <meta name="description" content="Free online memory game. All games are developed by Vladimír Šimek">
+    <title>Vladimír Šimek</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YX1V6FE2N5"></script>
     <script>
@@ -19,11 +19,20 @@
     </script>
     <script type="text/javascript" id="cookiebanner"
             src="https://cdn.jsdelivr.net/gh/dobarkod/cookie-banner@1.2.2/dist/cookiebanner.min.js"></script>
-    <link rel="stylesheet" href="../css/landing.css">
+    <link rel="stylesheet" href="../../../css/memory.css">
+    <script src="../../../js/memory.js"></script>
+
 </head>
 <body>
-<div class="top">
-    <h1 class="topName">Vladimír Šimek - Web under construction</h1>
+<div class="everything">
+    <div class="top">
+        <h1 class="topName">Vladimír Šimek - Memory game</h1>
+    </div>
+    <div class="allInside">
+        <div class="memoryGameCenteredDiv">
+
+        </div>
+    </div>
 </div>
 </body>
 </html>
