--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Vladimír Šimek is a professional developer, traveler, photographer and student from Czech Republic.">
-    <title>Web under construction</title>
+    <title>Vladimír Šimek</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YX1V6FE2N5"></script>
     <script>
