--- a/m/projects/index.html
+++ b/m/projects/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="A lot of projects from Vladimír Šimek, including games, calculators and lot of other stuff.">
-    <title>Web under construction</title>
+    <title>Vladimír Šimek | Projects</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YX1V6FE2N5"></script>
     <script>
@@ -19,7 +19,8 @@
     </script>
     <script type="text/javascript" id="cookiebanner"
             src="https://cdn.jsdelivr.net/gh/dobarkod/cookie-banner@1.2.2/dist/cookiebanner.min.js"></script>
-    <link rel="stylesheet" href="../css/landing.css">
+    <link rel="stylesheet" href="../../css/landing.css">
+
 </head>
 <body>
 <div class="top">
