--- a/projects/games/memory/index.html
+++ b/projects/games/memory/index.html
@@ -29,7 +29,7 @@
         <h1 class="topName">Vladimír Šimek - Memory game</h1>
     </div>
     <div class="allInside">
-        <div class="memoryGameCenteredDiv">
+        <div id="memoryGameCenteredDiv" class="memoryGameCenteredDiv">
 
         </div>
     </div>
