--- a/projects/games/memory/index.html
+++ b/projects/games/memory/index.html
@@ -24,6 +24,13 @@
 
 </head>
 <body>
+<div id="myModal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Enjoy playing free online game "Memory"! To play again refresh the page.</p>
+    </div>
+</div>
+
 <div class="everything">
     <div class="top">
         <h1 class="topName">Vladimír Šimek - Memory game</h1>
