Better mobile support

--- a/projects/calculator/grade/index.html
+++ b/projects/calculator/grade/index.html
@@ -21,6 +21,7 @@
     </script>
     <script type="text/javascript" id="cookiebanner"
             src="https://cdn.jsdelivr.net/gh/dobarkod/cookie-banner@1.2.2/dist/cookiebanner.min.js"></script>
+    <link rel="stylesheet" href="../../../css/landing.css">
 </head>
 <body>
 <div class="top">
