--- a/projects/games/memory/index.html
+++ b/projects/games/memory/index.html
@@ -21,13 +21,14 @@
             src="https://cdn.jsdelivr.net/gh/dobarkod/cookie-banner@1.2.2/dist/cookiebanner.min.js"></script>
     <link rel="stylesheet" href="../../../css/memory.css">
     <script src="../../../js/memory.js"></script>
+    <link rel="stylesheet" href="../../../css/landing.css">
 
 </head>
 <body>
 <div id="myModal" class="modal">
     <div class="modal-content">
-        <span class="close">&times;</span>
         <p>Enjoy playing free online game "Memory"! To play again refresh the page.</p>
+        <span class="close">&times;</span>
     </div>
 </div>
 
