--- a/projects/games/memory/index.html
+++ b/projects/games/memory/index.html
@@ -70,38 +70,65 @@
     let opened = 0
     let fixedOpened = 0
     let questionMark = "❓"
-    let list = [null, null]
+    let listID = [null, null]
+    let listValue = [null, null]
 
     document.addEventListener('click', function (e) {
         let id = e.target.id
         let ids = id.split(" ")
 
+        if (listID[0] === null || listID[1] === null) {
 
-        if (ids[1] === "boxOverlap") {
-            // open card
-            let getBox
-            getBox = document.getElementById(id)
 
-            if (list[0] === null) {
-                list[0] = ids[2]
-            } else if (list[1] === null) {
-                list[1] = ids[2]
+            if (ids[1] === "boxOverlap") {
+                // open card
+                let getBox
+                getBox = document.getElementById(id)
+
+                let num = ids[2].match(/\d+$/)
+                let numNum
+                if (num) {
+                    numNum = num[0]
+                }
+                numNum = parseInt(numNum, 10)
+
+                if (listID[0] === null) {
+                    listID[0] = ids[2]
+                    listValue[0] = emojisList[numNum]
+
+                } else if (listID[1] === null) {
+                    listID[1] = ids[2]
+                    listValue[1] = emojisList[numNum]
+                }
+                console.log(listValue)
+
+
+                if (opened < 2){
+                    getBox.innerHTML = emojisList[numNum]
+                    opened++
+                }
             }
-            console.log(list)
-
-            let num = ids[2].match(/\d+$/)
-            let numNum
-            if (num) {
-                numNum = num[0]
-            }
-            numNum = parseInt(numNum, 10)
-            getBox.innerHTML = emojisList[numNum]
-            opened++
         }
-
         if (opened === 2) {
             setTimeout(function () {
+                console.log("s")
                 //hide cards
+                if (listValue[0] === listValue[1]) {
+                    fixedOpened+=2
+                } else {
+                    let element1 = document.getElementById(("box boxOverlap " + listID[0]))
+                    let element2 = document.getElementById(("box boxOverlap " + listID[1]))
+
+                    element1.innerHTML = questionMark
+                    element2.innerHTML = questionMark
+                }
+                //clear
+                opened = 0
+                listID[0] = null
+                listID[1] = null
+                listValue[0] = null
+                listValue[1] = null
+                console.log("d")
             }, 2000)
 
         }
