--- a/projects/games/memory/index.html
+++ b/projects/games/memory/index.html
@@ -93,6 +93,7 @@
                     listValue[0] = emojisList[numNum]
 
                 } else if (listID[1] === null) {
+                    if (listID[0] === ids[2]) return;
                     listID[1] = ids[2]
                     listValue[1] = emojisList[numNum]
                 }
