--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 <body>
 <div class="top">
+    yes
     <h1 class="topName">Vladimír Šimek - Web under construction</h1>
 </div>
 </body>
